[package]
name = "button_lib"
version = "0.1.0"
edition = "2024"
authors = ["Mr Richardson"]
description = "A simple library for buttons with macroquad."
documentation = "https://docs.rs/button_lib" # TODO verify
readme = "README.md"
license = "GNU General Public License v3.0"
repository = "https://github.com/Mr-Richardson/macroquad_button_lib"
keywords = ["library", "macroquad", "simple"]
categories = ["gui", "game-development"]

[lib]
name = "button_lib"
crate-type = ["rlib"]

[dependencies]
macroquad = "0.4.15"
text_lib = "0.1.0"
