[package]
name = "button_lib"
version = "0.1.1"
authors = ["Mr Richardson"]
edition = "2024"
description = "A simple library for buttons with macroquad."
documentation = "https://docs.rs/button_lib"
readme = "README.md"
repository = "https://github.com/Mr-Richardson/macroquad_button_lib"
license = "GPL-3.0-or-later"
keywords = ["macroquad", "simple", "button"]
categories = ["gui", "game-development", "rendering", "graphics"]
exclude = [".github/workflows/rust.yml", ".gitignore", "rustfmt.toml"]

[dependencies]
macroquad = "0.4.15"
text_lib = "1.0.0"
